<resources>
    <string name="app_name">DeliveryShopping</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="cart">cart</string>
    <string name="categories">categories</string>
    <string name="aboutus">aboutUs</string>
    <string name="terms">terms</string>
    <string name="licences">Licences</string>
    <string name="my_shopping">My Shopping</string>
    <string name="open">open_drawer</string>
    <string name="close">close_drawer</string>
    <string name="new_items">New items</string>
    <string name="popular_items">Popular items</string>
    <string name="suggested_items">Suggested items</string>
    <string name="symbol">$</string>
    <string name="price">price</string>
    <string name="name">name</string>
    <string name="add_to_cart">add to cart</string>
    <string name="reviews">Reviews</string>
    <string name="add_review">(Add review)</string>
    <string name="username">userName</string>
    <string name="text_review">text review</string>
    <string name="_16_08_2021">16-08-2021</string>
    <string name="add_a_review">add a review</string>
    <string name="add">add</string>
    <string name="warning">please enter all the information</string>
    <string name="drinks">Drinks</string>
    <string name="food">Food</string>
    <string name="nuts">Nuts</string>
    <string name="see_all_categories">See all categories</string>
    <string name="totalPrice">totalPrice</string>
    <string name="sum">Sum:</string>
    <string name="next">Next</string>
    <string name="your_cart_is_empty">Your cart is Empty</string>
    <string name="your_cart_items">Your cart items</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="items">Items:</string>
    <string name="total_price">Total Price:</string>
    <string name="addres">Address:</string>
    <string name="phone">Phone number:</string>
    <string name="paymentMethod">Select a Payment Method:</string>
    <string name="visa_card">Visa Card</string>
    <string name="paypal">PayPal</string>
    <string name="checkout">Checkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_payment_accepted">Your payment accepted</string>
    <string name="start_shopping">start shopping</string>
    <string name="contentlicences">contentLicences</string>
    <string name="dismiss">Dismiss</string>
</resources>