<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:id="@+id/thirdCartItems"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:id="@+id/thirdTotalPrice"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addres"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:id="@+id/thirdAddress"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:id="@+id/thirdPhone"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymentMethod"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visa_card"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/visaCard"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:id="@+id/paypal"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:backgroundTint="#4CAF50"
            android:textAllCaps="false"
            android:id="@+id/thirdBackBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:backgroundTint="#4CAF50"
            android:layout_marginStart="10dp"
            android:id="@+id/thirdNextBtn"/>

    </LinearLayout>



</LinearLayout>