<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:id="@+id/messageName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageName"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="5dp"
        android:id="@+id/messageUserName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_a_review"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/messageUserName"
        android:layout_marginTop="10dp"
        android:lines="4"
        android:id="@+id/messageReview"
        android:gravity="start"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textColor="#F44336"
        android:layout_below="@+id/messageReview"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/messageWarning"
        android:visibility="gone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_below="@+id/messageWarning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/messageButton"
        android:backgroundTint="#4CAF50"/>

</RelativeLayout>