<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/searchEditTxt"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/searchEditTxt"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinks"
            android:textSize="25sp"
            android:textColor="#4CAF50"
            android:textStyle="bold"
            android:id="@+id/drinksCategoryTxt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textSize="25sp"
            android:textColor="#4CAF50"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:id="@+id/foodCategoryTxt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuts"
            android:textSize="25sp"
            android:textColor="#4CAF50"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:id="@+id/nutsCategoryTxt"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all_categories"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textStyle="normal"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="#9C27B0"
        android:id="@+id/seeAllCategoriesTxt"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchRecyclerView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/seeAllCategoriesTxt"
        android:layout_marginTop="20dp"/>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom"
        android:layout_alignParentBottom="true"
        android:id="@+id/searchNavBottom"/>

</RelativeLayout>