<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/your_cart_items"
        android:textColor="#4CAF50"
        android:textSize="20sp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_below="@+id/your"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/FirstCartRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cartSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FirstCartRecyclerView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#4CAF50"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FirstCartRecyclerView"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/cartSymbol"
                android:text="@string/totalPrice"
                android:textColor="#4CAF50"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FirstCartRecyclerView"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_toLeftOf="@+id/totalPrice"
                android:text="@string/sum"
                android:textColor="#4CAF50"
                android:textSize="20sp" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nestedScroll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/next" />

    <TextView
        android:id="@+id/emptyCartTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/your_cart_is_empty"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:visibility="gone" />
</RelativeLayout>
