<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="5dp"
    app:cardBackgroundColor="#367F9580"
    app:cardCornerRadius="7dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:id="@+id/nameAdapter" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/delete"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginEnd="10dp"
            android:id="@+id/deleteButton"
            android:backgroundTint="#4CAF50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_toLeftOf="@+id/deleteButton"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textColor="#4CAF50"
            android:id="@+id/adapterPrice" />
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>