<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentCardReview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/userNameReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameReview"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_review"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dateReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textReview"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/_16_08_2021"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>