<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/newItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/new_items"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerNewItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newItems" />

            <TextView
                android:id="@+id/popularItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recyclerNewItems"
                android:layout_marginTop="10dp"
                android:text="@string/popular_items"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPopularItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popularItems" />

            <TextView
                android:id="@+id/suggestedItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recyclerPopularItems"
                android:layout_marginTop="10dp"
                android:text="@string/suggested_items"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSuggested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/suggestedItems" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom" />

</RelativeLayout>